solved overflow for phone

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 .gradient-background {
-	background: linear-gradient(300deg, #3c7962, #77bba2, #eae7e1);
+	background: linear-gradient(300deg, #0b2b26, #3c7962, #77bba2, #eae7e1);
 	background-size: 180% 180%;
 	animation: gradient 15s ease infinite;
 	height: 100vh;
@@ -35,7 +35,12 @@
   border-radius: 0.75rem;
 }
 
-.profile-img {
-  height: 100px;
-  border-radius: 50%;
+.features-p{
+	text-align: justify;
+}
+
+@media (max-width: 992px){
+	.phone{
+		display: none;
+	}
 }
